# TCSrandomizer

./: '  .clang-format  .gitignore  CMakeLists.txt  README.md  RandoGui.sln  RandoTCS.sln  TCSrandomizer.sln  ]
RandoGui/: RandoGui.vcxproj  RandoGui.vcxproj.filters
RandoTCS/: CharacterData.h  Defines.h  Enemies.cpp  EnemyData.cpp  EnemyPatch.cpp  EnemyPatch.h  FileGen.cpp  FileGen.h  LevelData.cpp  Levels.cpp  MyForm.h  OtherStuff.cpp  RandoTCS.vcxproj  RandoTCS.vcxproj.filters  Randomize.cpp  cantina.txt  main.cpp  pch.h
RandoTCS/files/: log2.txt
TCSrandomizer/: .clang-format  App.cpp  App.h  CMakeLists.txt  CharacterData.cpp  CharacterData.h  Characters.cpp  Characters.h  Defines.h  Enemies.cpp  Enemies.h  EnemyData.cpp  EnemyPatch.cpp  FileGen.cpp  FileGen.h  FilePatch.cpp  FilePatch.h  Functions.cpp  Functions.h  LevelData.cpp  LevelData.h  Levels.cpp  Levels.h  MainFrame.cpp  MainFrame.h  OtherStuff.cpp  OtherStuff.h  Randomize.cpp  Randomize.h  TCSrandomizer.vcxproj  TCSrandomizer.vcxproj.filters  externData.h  main.cpp  pch.h
TCSrandomizer/files/: CHARACTERDATA.txt  LEVELDATA.txt  cantina.txt  log2.txt  moreData.cpp  temp.cpp  trainingremote.scp
src/: CharacterData.cpp  CharacterData.h  Characters.cpp  Characters.h  Defines.h  Enemies.cpp  Enemies.h  EnemyData.h  FileGen.cpp  LevelData.cpp  LevelData.h  Levels.cpp  Levels.h  OtherStuff.cpp  OtherStuff.h  Randomize.cpp  externData.h  gui.cpp  main.cpp  pch.h
